<?xml version="1.0"?>
<package format="3">
  <name>dense_map_generator</name>
  <version>0.0.0</version>
  <description>The calibration package</description>

  <maintainer email="nithilan.karunakaran@tier4.jp">Nithilan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf_conversions</build_depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  
</package>